Updated yaml file with pandas package

--- a/env.yaml
+++ b/env.yaml
@@ -1,4 +1,4 @@
-name: pythonGee
+name: MSc_Thesis
 channels:
   - conda-forge
 dependencies:
@@ -7,4 +7,5 @@ dependencies:
   - earthengine-api
   - geemap
   - pygadm
+  - pandas
   - geopandas
